--- a/public/assets/css/validnavs.css
+++ b/public/assets/css/validnavs.css
@@ -3376,7 +3376,25 @@ nav.navbar.validnavs .navbar-collapse.collapse button i {
 	top: 0%;
 	width: 100%;
 	z-index: -1;
-	background: #dc3545bd;
+	background: #dc3545;
+}
+
+.home-section h1 {
+    font-weight: bold;
+    font-family: '__Outfit_d28b19';
+    color: #fff;
+    letter-spacing: 0.5px;
+    text-decoration: underline;
+}
+.home-section {
+    background: #dc3545;
+    padding: 30px 0;
+    margin: 0;
+}
+
+h2 {
+    font-family: '__Outfit_d28b19';
+    letter-spacing: 0.5px;
 }
 
 
