--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -324,10 +324,10 @@ h4,
 h5,
 h6 {
 	color: var(--color-heading);
-	font-weight: normal;
+	font-weight: 600 !important;
 	line-height: 1.2;
-	font-family: var(--font-heading);
-	letter-spacing: 0;
+	font-family: '__Outfit_d28b19';
+	letter-spacing: 0.5px;
 	margin: 0;
 	margin-bottom: 15px;
 }
