--- a/public/assets/css/validnavs.css
+++ b/public/assets/css/validnavs.css
@@ -3363,7 +3363,7 @@ nav.navbar.validnavs .navbar-collapse.collapse button i {
 	display: block;
 }
 
-.featured-stories{
+.featured-stories {
 	position: relative;
 }
 
@@ -3380,48 +3380,56 @@ nav.navbar.validnavs .navbar-collapse.collapse button i {
 }
 
 .home-section h1 {
-    font-weight: bold;
-    font-family: '__Outfit_d28b19';
-    color: #fff;
-    letter-spacing: 0.5px;
-    text-decoration: underline;
+	font-weight: bold;
+	font-family: '__Outfit_d28b19';
+	color: #fff;
+	letter-spacing: 0.5px;
+	text-decoration: underline;
 }
 
 .home-section {
-    background: #dc3545;
-    padding: 30px 0;
-    margin: 0;
+	background: #dc3545;
+	padding: 30px 0;
+	margin: 0;
 }
 
 h2 {
-    font-family: '__Outfit_d28b19';
-    letter-spacing: 0.5px;
+	font-family: '__Outfit_d28b19';
+	letter-spacing: 0.5px;
 }
 
 
 .startup-card {
-  border-radius: 12px;
-  overflow: hidden;
-  transition: all 0.3s ease;
+	border-radius: 12px;
+	overflow: hidden;
+	transition: all 0.3s ease;
 }
 
 .startup-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+	transform: translateY(-5px);
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 
 .story-img {
-  height: 100%;
-  object-fit: cover;
-  border-radius: 12px 0 0 12px;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 12px 0 0 12px;
 }
 
-.slick-next:before, .slick-prev:before {
-    font-family: slick;
-    font-size: 40px !important;
-    line-height: 1;
-    opacity: .75;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+.slick-next:before,
+.slick-prev:before {
+	font-family: slick;
+	font-size: 40px !important;
+	line-height: 1;
+	opacity: .75;
+	color: #fff;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.company-card .about-text {
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
