--- a/public/assets/css/validnavs.css
+++ b/public/assets/css/validnavs.css
@@ -3433,3 +3433,8 @@ h2 {
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 }
+
+.badge{
+	font-size: 14px !important;
+	border: 1px solid #ddd !important;
+}
