--- a/public/assets/css/validnavs.css
+++ b/public/assets/css/validnavs.css
@@ -3438,3 +3438,10 @@ h2 {
 	font-size: 14px !important;
 	border: 1px solid #ddd !important;
 }
+
+.card-text p {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
